infrastructure/kubernetes/postgres.yaml
# Kubernetes Postgres deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: equiaudit

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres

          image: postgres:15

          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: equiaudit

spec:
  selector:
    app: postgres

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
